[gd_scene load_steps=5 format=3 uid="uid://bm4jw3cqlopvs"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_1rsdt"]
[ext_resource type="PackedScene" uid="uid://bwtk6ww61t1dp" path="res://player/player.tscn" id="1_w8vrc"]
[ext_resource type="PackedScene" uid="uid://mgpkp3338n2y" path="res://scenes/user_interface/ui.tscn" id="3_f1fsq"]
[ext_resource type="PackedScene" uid="uid://y67tp2tler84" path="res://globals/transition_layer.tscn" id="4_5hagy"]

[node name="Level" type="Node2D"]
script = ExtResource("1_1rsdt")

[node name="Ground" type="Node2D" parent="."]

[node name="Structures" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_w8vrc")]
position = Vector2(2.08165e-12, 1664)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.65, 0.65)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="Lights" type="Node2D" parent="."]

[node name="AmbientLight" type="DirectionalLight2D" parent="Lights"]
energy = 0.25
blend_mode = 1

[node name="Ui" parent="." instance=ExtResource("3_f1fsq")]

[node name="TransitionLayer" parent="." instance=ExtResource("4_5hagy")]

[connection signal="granade_shoot" from="Player" to="." method="_on_player_granade_shoot"]
[connection signal="lazer_shoot" from="Player" to="." method="_on_player_lazer_shoot"]
